--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -23,7 +23,7 @@
 <script src="lib/jasmine-jquery.js"></script>
 
 <!-- source files here... -->
-
+<script src="../js/$inject.js"></script>
 <!-- include spec files here... -->
 <script src="spec/jasmine-test-injector-spec.js"></script>
 
