--- a/test/SpecRunner.html
+++ b/test/SpecRunner.html
@@ -27,6 +27,6 @@
 
 <!-- include spec files here... -->
 <script src="spec/jasmine-test-injector-spec.js"></script>
-
+<script src="../js/testiife.js"></script>
 </body>
 </html>
